Fix navbar positioning on mobile devices

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,7 @@
+li.nav-item {
+  text-align: center;
+}
+
 body, .navbar {
   background-color: #ee2d19;
 }
